--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "clsx": "^1.2.1",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.53.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.0.6",
@@ -19,6 +23,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
+    "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
 }
